Added Replies table to db with corresponding schema
