# Assignment8/backend/src/app.js
@@ -10,6 +10,7 @@ const auth = require('./auth');
 const person = require('./Person');
 const category = require('./categoryFilter');
 const listing = require('./Listing');
+const replies = require('./Replies');
 
 const app = express();
 app.use(cors());
@@ -34,6 +35,7 @@ app.use(
 app.post('/insertUser', person.insertUser);
 app.get('/v0/Listing', auth.check, listing.GetListings);
 app.get('/v0/display/:id', listing.GetListingById);
+app.get('/v0/replies/:id', replies.GetReplies);
 app.get('/v0/category', auth.check, category.selectCategory);
 app.get('/v0/specificFilter', auth.check, listing.selectSpecificFilter);
 app.get('/v0/search', auth.check, listing.GetSearchedAndCatListings);
